[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/agents/StatBox.gd" type="Script" id=1]
[ext_resource path="res://src/agents/AgentUI.gd" type="Script" id=2]

[node name="AgentUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StatBox" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -551.0
margin_top = -91.0
margin_right = -465.0
margin_bottom = -41.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="StatBox"]
margin_right = 86.0
margin_bottom = 50.0

[node name="HealthBar" type="ProgressBar" parent="StatBox/VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 86.0
margin_bottom = 14.0
step = 1.0
value = 100.0

[node name="HungerBar" type="ProgressBar" parent="StatBox/VBoxContainer"]
modulate = Color( 0.243137, 1, 0, 1 )
margin_top = 18.0
margin_right = 86.0
margin_bottom = 32.0
step = 1.0

[node name="EnergyBar" type="ProgressBar" parent="StatBox/VBoxContainer"]
modulate = Color( 0.0862745, 0, 1, 1 )
margin_top = 36.0
margin_right = 86.0
margin_bottom = 50.0
step = 1.0
value = 100.0
